# embedded-ble

./: Cargo.toml  README.md  build.rs  notes.md  notes.txt
.cargo/: config
ble/: Cargo.toml
ble/examples/: rtic_demo.rs
ble/src/: advertisements.rs  gap.rs  gatt.rs  gatt_server.rs  l2cap.rs  lib.rs
controller/: Cargo.toml
controller-nrf5x/: Cargo.toml
controller/src/: lib.rs
embedded-ble/: Cargo.toml  build.rs
examples/: advertise.rs  beacon.rs  gatt.rs  rtic_demo.rs
host/: Cargo.toml
host/examples/: rtic_demo.rs
host/src/: advertisements.rs  gatt.rs
nrf5x/: Cargo.toml
nrf5x-controller/: Cargo.toml
nrf5x-controller/src/: lib.rs
nrf5x-hci/: Cargo.toml
nrf5x-hci/src/: lib.rs
nrf5x/src/: lib.rs
src/: advertisements.rs  gap.rs  lib.rs  link_layer.rs
src/nrf5x/: mod.rs
