[package]
name = "embedded-ble"
description = "100% rust BLE stack"
authors = ["redengin <sholstei@yahoo.com>"]
repository = "https://github.com/redengin/embedded-ble"
categories = ["embedded", "no-std"]
keywords = ["ble", "bluetooth", "nrf"]
readme = "README.md"
license = "../LICENSE"
edition = "2018"
version = "0.0.1"

[features]
nrf5x = [] # generic tag for all nrf5x hardware
nrf51 =     ["nrf5x", "dep:nrf51-hal"]
# nrf52805 =  ["nrf5x", "dep:nrf52805-hal"]
nrf52810 =  ["nrf5x", "dep:nrf52810-hal"]
nrf52811 =  ["nrf5x", "dep:nrf52811-hal"]
nrf52832 =  ["nrf5x", "dep:nrf52832-hal"]
nrf52833 =  ["nrf5x", "dep:nrf52833-hal"]
nrf52840 =  ["nrf5x", "dep:nrf52840-hal"]
nrf5x-xxAA-package = []   # nrf5x small, build.rs determines memory
nrf5x-xxAB-package = []   # nrf5xx large, build.rs determines memory
default = ["nrf5x-xxAB-package"]

[dependencies]
num_enum = { version="0.5.7", default-features=false }
# TODO uninit = { version="0.5.0", default-features=false }
nrf51-hal = { version="0.15", optional=true, features=["rt"] }
# nrf52805-hal = { version="0.15", optional=true, features=["rt"] }
nrf52810-hal = { version="0.15", optional=true, features=["rt"] }
nrf52811-hal = { version="0.15", optional=true, features=["rt"] }
nrf52832-hal = { version="0.15", optional=true, features=["rt"] }
nrf52833-hal = { version="0.15", optional=true, features=["rt"] }
nrf52840-hal = { version="0.15", optional=true, features=["rt"] }
# FIXME used for debugging
rtt-target = { version="0.3", features=["cortex-m"] }

# dependencies for the examples
[dev-dependencies]
# modify per your target (also update Embed.toml)
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.0"
panic-rtt-target = { version="0.1", features=["cortex-m"] }
rtt-target = { version="0.3", features=["cortex-m"] }
fugit = "0.3.5"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1 # better optimizations
opt-level = "s"
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations