[package]
name = "embedded-ble"
description = "100% rust BLE stack"
authors = ["redengin <sholstei@yahoo.com>"]
repository = "https://github.com/redengin/embedded-ble"
categories = ["embedded", "no-std"]
keywords = ["ble", "bluetooth", "nrf"]
readme = "README.md"
license = "LICENSE"
edition = "2018"
version = "0.0.1"

[dependencies]
controller = { path="../controller" }
nrf5x-controller = { path="../nrf5x-controller", optional=true }
# TODO uninit = { version="0.5.0", default-features=false }

# dependencies for the examples
[target.'cfg(target_arch="arm")'.dev-dependencies]
# modify per your target
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.0"
panic-rtt-target = { version="0.1", features=["cortex-m"] }
rtt-target = { version="0.3", features=["cortex-m"]}
nrf52832-hal = { version="0.15.1", features=["rt"], default-features=false }
fugit = "0.3.5"

[features]
nrf51 = ["dep:nrf5x-controller"]
nrf52805 = ["dep:nrf5x-controller"]
nrf52810 = ["dep:nrf5x-controller"]
nrf52811 = ["dep:nrf5x-controller"]
nrf52832 = ["dep:nrf5x-controller"]
nrf52833 = ["dep:nrf5x-controller"]
nrf52840 = ["dep:nrf5x-controller"]