[package]
name = "embedded-ble"
description = "100% rust BLE stack"
authors = ["redengin <sholstei@yahoo.com>"]
repository = "https://github.com/redengin/embedded-ble"
categories = ["embedded", "no-std"]
keywords = ["ble", "bluetooth", "nrf"]
readme = "README.md"
license = "../LICENSE"
edition = "2018"
version = "0.0.1"

[dependencies]
embedded-ble-nrf5x = { version="0.0.1", path="../nrf5x", optional=true }
# TODO uninit = { version="0.5.0", default-features=false }

# dependencies for the examples
[target.'cfg(target_arch="arm")'.dev-dependencies]
# modify per your target
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.0"
panic-rtt-target = { version="0.1", features=["cortex-m"] }
rtt-target = { version="0.3", features=["cortex-m"]}
nrf52832-hal = { version="0.15.1", features=["rt"], default-features=false }
fugit = "0.3.5"

[features]
nrf51 = ["embedded-ble-nrf5x"]
nrf52805 = ["embedded-ble-nrf5x"]
nrf52810 = ["embedded-ble-nrf5x"]
nrf52811 = ["embedded-ble-nrf5x"]
nrf52832 = ["embedded-ble-nrf5x"]
nrf52833 = ["embedded-ble-nrf5x"]
nrf52840 = ["embedded-ble-nrf5x"]