[package]
name = "controller"
description = "100% rust BLE stack for nrf5x"
authors = ["redengin <sholstei@yahoo.com>"]
repository = "https://github.com/redengin/embedded-ble"
categories = ["embedded", "no-std"]
keywords = ["ble", "bluetooth", "nrf52832"]
readme = "README.md"
license = "LICENSE"
edition = "2018"
version = "0.0.1"
