[package]
name = "embedded-ble"
description = "100% rust BLE stack"
authors = ["redengin <sholstei@yahoo.com>"]
repository = "https://github.com/redengin/embedded-ble"
categories = ["embedded", "no-std"]
keywords = ["ble", "bluetooth", "nrf"]
readme = "README.md"
license = "LICENSE"
edition = "2018"
version = "0.0.1"

[dependencies]
nrf52832-pac = { version="0.11", optional=true, default-features = false }
embedded-ble-nrf5x= { path="../nrf5x", optional=true }

[features]
nrf52832 = ["dep:nrf52832-pac", "dep:embedded-ble-nrf5x"]

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1 # better optimizations
opt-level = "s"
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
