[package]
name = "embedded-ble"
description = "100% rust BLE stack"
authors = ["redengin <sholstei@yahoo.com>"]
repository = "https://github.com/redengin/embedded-ble"
categories = ["embedded", "no-std"]
keywords = ["ble", "bluetooth", "nrf"]
readme = "README.md"
license = "LICENSE"
edition = "2018"
version = "0.0.1"

[dependencies]
nrf52832-pac = { version="0.11", optional=true, default-features = false }
embedded-ble-nrf5x= { path="../nrf5x", optional=true }

[features]
nrf52832 = ["dep:nrf52832-pac", "dep:embedded-ble-nrf5x"]
