[package]
name = "nrf5x-hci"
description = "100% rust BLE stack for nrf52832"
authors = ["redengin <sholstei@yahoo.com>"]
repository = "https://github.com/redengin/embedded-ble"
categories = ["embedded", "no-std"]
keywords = ["ble", "bluetooth", "nrf52832"]
readme = "README.md"
license = "LICENSE"
edition = "2018"
version = "0.0.1"

[dependencies]
nrf52832-pac = { version="0.11", optional=true, features=["rt"] }

[features]
nrf52832 = ["dep:nrf52832-pac"]
xxAA-package = []
xxAB-package = []
default = ["xxAB-package"]